# work_2026

./: .gitignore  README.md  package-lock.json  package.json
.claude/commands/: add-article.md  deploy-homepage.md
.claude/rules/: homepage-development.md
.github/ISSUE_TEMPLATE/: config.yml  goal.yml  milestone.yml  reflection.yml
.github/scripts/: update-readme.js
.github/workflows/: daily-summary.yml  deploy-homepage.yml  update-readme.yml
0_weekly_note/: 20260101.md  CLAUDE.md  README.md  claude.md  shuuhou.sh  template.md
0_weekly_note/notes/: 20260101.md
11_quiz_app/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  index.html  nginx.conf  package.json
11_quiz_app/backend/: db.py  main.py  requirements.txt  schema.sql  (+2 more)
1_docs/: CLAUDE.md  books.md
2_slides/: CLAUDE.md  README.md  create-presentation.sh
3_homepage/: .env.local.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  vite.config.ts
4_watch_worktime_app/: .env.example  .gitignore  CLAUDE.md  GITHUB_ACTIONS_SETUP.md  README.md  create_icon.py  icon.icns  pyproject.toml  requirements.txt  send_daily_summary.py  setup.py  test_email.py
4_watch_worktime_app/.github/workflows/: daily-summary.yml
4_watch_worktime_app/src/worktime_tracker/: __init__.py  app.py  calendar_api.py  dialog.py  email_summary.py  gmail_api.py  scheduler.py
5_sql_dfd/: .gitignore  CLAUDE.md  README.md
98_digdag/: README.md  digdag.properties  tutorial.dig
99_embulk/: config.yml  setup_snowflake.sql  tutorial.md
quiz_app/: index.html  package-lock.json  package.json
(+157 files in other folders)
